--- a/sass/index.scss
+++ b/sass/index.scss
@@ -24,6 +24,7 @@
 @import "components/navbar.scss";
 @import "components/pagination.scss";
 @import "components/table.scss";
+@import "components/side-note.scss";
 
 /* OVERRIDING UTILITIES */
 @import "utility.scss";
