--- a/sass/components/nav-item.scss
+++ b/sass/components/nav-item.scss
@@ -3,7 +3,7 @@
     background-color: transparent;
     border          : none;
     border-radius   : var(--border-radius);
-    color           : var(--fg-100);
+    color           : var(--default-text);
     cursor          : pointer;
     display         : flex;
     flex-wrap       : wrap;
@@ -18,12 +18,12 @@
 .nav-item.selected,
 .nav-item:focus,
 .nav-item:hover {
-    background-color: var(--bg-300);
+    background-color: var(--bg-1);
     text-decoration: none;
 }
 
 .nav-item:active {
-    background-color: var(--bg-500);
+    background-color: var(--bg-2);
 }
 
 .nav-item:focus {
