--- a/sass/utility.scss
+++ b/sass/utility.scss
@@ -82,6 +82,24 @@
     --shadow: var(--shadow-4);
 }
 
+.raised.primary {
+    --shadow-color: var(--bubblegum-100);
+}
+
+.raised.accent {
+    --shadow-color: var(--blueberry-100);
+}
+
+@media (prefers-color-scheme: dark) {
+    .raised.primary {
+        --shadow-color: var(--bubblegum-900);
+    }
+
+    .raised.accent {
+        --shadow-color: var(--blueberry-900);
+    }
+}
+
 .spaced {
     justify-content: space-between;
 }
