--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -121,3 +121,32 @@
     font-size  : clamp(1.5rem, 2vw, 1.9rem);
     font-weight: 800;
 }
+
+.page-with-sidebar {
+    display              : grid;
+    grid-template-columns: 1fr;
+    gap                  : 1em;
+}
+
+.page-with-sidebar .menu {
+    display: none;
+}
+
+@media (min-width: 960px) {
+    .page-with-sidebar {
+        grid-template-columns: 1fr 3fr;
+    }
+
+    .page-with-sidebar .navbar {
+        grid-column: 1/3;
+    }
+
+    .page-with-sidebar .menu {
+        display    : revert;
+        grid-column: 1/2;
+    }
+
+    .page-with-sidebar main {
+        grid-column: 2/3;
+    }
+}
