--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -6,6 +6,7 @@
     color           : var(--color, var(--default-text));
     cursor          : pointer;
     display         : inline-flex;
+    font-family     : var(--font-sans);
     font-size       : 1em;
     font-weight     : 600;
     gap             : 1em;
@@ -126,4 +127,8 @@
 
 .fixed.floating {
     position: fixed;
+}
+
+.button.circle {
+    min-width: 0;
 }
