--- a/sass/components/code-snippet.scss
+++ b/sass/components/code-snippet.scss
@@ -6,7 +6,7 @@
     gap               : var(--space-l);
     grid-template-rows: auto 1fr;
     overflow          : auto;
-    padding           : var(--space-l);
+    padding           : var(--space-s);
     scrollbar-color   : var(--bg-3) transparent;
 }
 
