--- a/sass/index.scss
+++ b/sass/index.scss
@@ -25,6 +25,7 @@
 @import "components/pagination.scss";
 @import "components/table.scss";
 @import "components/side-note.scss";
+@import "components/banner.scss";
 
 /* OVERRIDING UTILITIES */
 @import "utility.scss";
