--- a/sass/components/side-note.scss
+++ b/sass/components/side-note.scss
@@ -1,9 +1,10 @@
 .side-note {
-    align-items: center;
-    color      : var(--color, var(--subtle-text));
-    display    : flex;
-    gap        : 1ch;
-    padding    : var(--space-xs);
+    align-items    : center;
+    color          : var(--color, var(--subtle-text));
+    display        : flex;
+    gap            : 1ch;
+    justify-content: center;
+    padding        : var(--space-xs);
 
     --color: var(--subtle-text);
 }
@@ -12,21 +13,24 @@
 .side-note .icon {
     height: 1.25em;
     width : 1.25em;
+    flex  : 0 0 1em;
 }
 
 .success.side-note {
     --color: var(--lime-900);
 }
 
+.success.side-note ::selection,
 .success.side-note::selection {
     color           : revert;
     background-color: var(--lime-100);
 }
 
 .warning.side-note {
-    --color: var(--banana-900);
+    --color: var(--orange-900);
 }
 
+.warning.side-note ::selection,
 .warning.side-note::selection {
     color           : revert;
     background-color: var(--banana-100);
@@ -36,9 +40,20 @@
     --color: var(--strawberry-700);
 }
 
+.error.side-note ::selection, 
 .error.side-note::selection {
     color           : revert;
     background-color: var(--strawberry-100);
+}
+
+.info.side-note {
+    --color: var(--blueberry-700);
+}
+
+.info.side-note ::selection,
+.info.side-note::selection {
+    color           : revert;
+    background-color: var(--blueberry-100);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -46,6 +61,7 @@
         --color: var(--lime-100);
     }
 
+    .success.side-note ::selection,
     .success.side-note::selection {
         background-color: var(--lime-900);
     }
@@ -54,6 +70,7 @@
         --color: var(--banana-100);
     }
 
+    .warning.side-note ::selection,
     .warning.side-note::selection {
         background-color: var(--banana-900);
     }
@@ -62,7 +79,17 @@
         --color: var(--strawberry-100);
     }
 
+    .error.side-note ::selection,
     .error.side-note::selection {
         background-color: var(--strawberry-700);
+    }
+
+    .info.side-note {
+        --color: var(--blueberry-100);
+    }
+
+    .info.side-note ::selection,
+    .info.side-note::selection {
+        background-color: var(--blueberry-700);
     }
 }
