--- a/docs/_includes/components/menu.html
+++ b/docs/_includes/components/menu.html
@@ -9,7 +9,7 @@
     {% for subpage in subpages %}
         <li>
             <a 
-                href="{{ subpage.url | absolute_url }}"
+                href="{{ subpage.url }}"
                 {% if page == subpage %}class="selected"{% endif %}
             >
                 {{ subpage.title }}
